--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@revolist/vue-datagrid": "^3.2.17",
     "axios": "^0.21.4",
     "core-js": "^3.18.2",
+    "exceljs": "^4.4.0",
     "jspdf": "^2.5.1",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
